@@ -1,3 +1,7 @@
+2010-02-27  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* interp.c (sim_create_inferior): Fix crashes on zero PROG_BFD or ARGV.
+
 2010-02-03  Anthony Green  <green@moxielogic.com>
 
 	* interp.c (sim_resume): nop is 0x0f, and 0x00 is an illegal
